<resources>
    <string name="app_name">UnitConverter</string>
    <string name="unit_converter">Unit 변환기</string>
    <string name="tip_calculator">Tip 계산기</string>
    <string name="exchange_rate">환율</string>
    <string name="current_exchange_rate">현재 환율 : </string>
    <string name="currency_name_won">원</string>
    <string name="currency_name_dollar">달러</string>
    <string name="add_tip">팁 추가</string>
    <string name="tip_15_percent">15%</string>
    <string name="tip_18_percent">18%</string>
    <string name="tip_20_percent">20%</string>
    <string name="tip_custom">CUSTOM(직접 입력)</string>
    <string name="total">합계</string>
    <string name="msg_input_total">금액을 입력해 주세요.</string>

    <!--Unit Converter-->
    <string name="temperature">온도</string>
    <string name="mass">무게</string>
    <string name="distance">거리</string>
    <string name="length">길이</string>
</resources>