<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layout_total"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@mipmap/icon_dollar"/>

        <EditText
            android:id="@+id/et_total"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"/>

        <ImageButton
            android:id="@+id/btn_remove_all_text"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="@mipmap/icon_cancel_circle"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_add_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_total"
        android:text="@string/add_tip"
        android:textSize="17dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="45dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_select_tip"
        android:layout_width="350dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_tip"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/layout_btn_tip_15"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/layout_btn_tip_18"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:background="@drawable/bg_round_button_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/tip_15_percent"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_tip_15_dollar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn_tip_18"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/layout_btn_tip_15"
            app:layout_constraintEnd_toStartOf="@id/layout_btn_tip_20"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:background="@drawable/bg_round_button_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/tip_18_percent"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_tip_18_dollar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn_tip_20"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/layout_btn_tip_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:background="@drawable/bg_round_button_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/tip_20_percent"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_tip_20_dollar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textAlignment="center"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_tip_custom"
            android:layout_width="250dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:text="@string/tip_custom"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:background="@drawable/bg_round_button_border"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_select_custom_tip"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_tip"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back_to_select_tip"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/icon_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_custom_tip_top_dollar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/icon_dollar"
            app:layout_constraintBottom_toBottomOf="@+id/et_top_custom_tip"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/et_top_custom_tip"
            android:visibility="visible"/>

        <EditText
            android:id="@+id/et_top_custom_tip"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@id/image_arrow_down"
            app:layout_constraintEnd_toEndOf="@+id/image_arrow_down"
            app:layout_constraintStart_toStartOf="@+id/image_arrow_down"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_custom_tip_top_percent"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@mipmap/icon_percent"
            app:layout_constraintBottom_toBottomOf="@+id/et_top_custom_tip"
            app:layout_constraintStart_toEndOf="@id/et_top_custom_tip"
            app:layout_constraintTop_toTopOf="@+id/et_top_custom_tip"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/image_arrow_down"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/icon_arrow_down"
            app:layout_constraintBottom_toTopOf="@id/tv_bottom_custom_tip"
            app:layout_constraintEnd_toEndOf="@+id/tv_bottom_custom_tip"
            app:layout_constraintStart_toStartOf="@+id/tv_bottom_custom_tip"
            app:layout_constraintTop_toBottomOf="@id/et_top_custom_tip" />

        <ImageView
            android:id="@+id/image_custom_tip_bottom_dollar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/icon_dollar"
            app:layout_constraintBottom_toBottomOf="@+id/tv_bottom_custom_tip"
            app:layout_constraintEnd_toStartOf="@id/tv_bottom_custom_tip"
            app:layout_constraintTop_toTopOf="@+id/tv_bottom_custom_tip"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_bottom_custom_tip"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@id/image_arrow_down"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <ImageView
            android:id="@+id/image_custom_tip_bottom_percent"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@mipmap/icon_percent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_bottom_custom_tip"
            app:layout_constraintStart_toEndOf="@id/tv_bottom_custom_tip"
            app:layout_constraintTop_toTopOf="@+id/tv_bottom_custom_tip"
            android:visibility="visible"/>

        <ImageButton
            android:id="@+id/btn_switch"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="50dp"
            android:background="@mipmap/icon_switch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="110dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_total_with_tip"
        android:text="@string/total"
        android:textSize="17dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:id="@+id/layout_total_with_tip"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@mipmap/icon_dollar"/>

        <TextView
            android:id="@+id/tv_total_with_tip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>